Deleted ToList method.